fix(presenter screen): make piece icons visible in casparcg

--- a/meteor/client/styles/countdown/presenter.scss
+++ b/meteor/client/styles/countdown/presenter.scss
@@ -63,6 +63,10 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
+
+			> svg {
+				flex-grow: 1;
+			}
 		}
 
 		.presenter-screen__part__piece-name {
